# nasum-transcriptor

./: .gitignore  .mcp.json  CLAUDE.md  README.md
backend/: .gitignore  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
specs/20260124-user-input-key/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/20260124-user-input-key/checklists/: requirements.md
specs/20260124-user-input-key/contracts/: api.md
