[project]
name = "nasum-transcriptor"
version = "2.0.0"
description = "Transcribe vocal melodies with chord notations from YouTube music"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    # Web framework
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "pydantic>=2.5.3,<3.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "aiofiles>=23.2.1,<25.0.0",
    
    # YouTube download
    "yt-dlp>=2024.1.1",
    
    # Audio processing - PINNED for compatibility
    "torch>=2.2.0,<2.3.0",
    "torchaudio>=2.2.0,<2.3.0",
    "librosa>=0.10.0,<1.0.0",
    
    # Source separation - SOTA (BS Roformer)
    "audio-separator>=0.17.0",
    "onnxruntime>=1.15.0",
    "onnx>=1.14.0,<1.17.0",
    "ml-dtypes>=0.2.0,<0.3.0",
    
    # Transcription
    "basic-pitch>=0.3.0,<1.0.0",
    "setuptools",
    
    # MIDI/Music
    "midiutil>=1.2.1,<2.0.0",
    "pretty_midi>=0.2.10,<1.0.0",
    
    # Scientific computing - PINNED for compatibility
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.12.0,<2.0.0",
    "scikit-learn>=1.3.0,<1.6.0",
]

[tool.uv]
# torch/torchaudio pinned to 2.2.x to avoid torchcodec dependency
# onnx pinned to <1.17 for ml_dtypes compatibility
