[project]
name = "leadsheet-transcriptor"
version = "0.1.0"
description = "Convert YouTube audio to lead sheets with melody and chords"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "yt-dlp>=2024.1.0",
    "demucs>=4.0.0",
    "basic-pitch>=0.3.0",
    "librosa>=0.10.0",
    "music21>=9.1.0",
    "numpy>=1.24.0,<2.0.0",
    "torch>=2.0.0,<2.3.0",
    "torchaudio>=2.0.0,<2.3.0",
    "scikit-learn>=1.3.0,<1.6.0",
    "setuptools",
    "python-multipart",
]

[tool.uv]
package = false
